--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~6.2.0",
-        "monolog/monolog": "1.*",
-        "friendsofphp/php-cs-fixer": "^2.4"
+        "monolog/monolog": "1.*"
     },
     "suggest": {
         "monolog/monolog": "Allows to handle logs"
